<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 5/10/2022.
  ~ Copyright (c) 2022.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.user.UserHomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_user_example" />

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/imgProfile"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHello"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/llIcon"
            android:layout_toEndOf="@id/imgProfile"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="M Sukron Kurniawan"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgNotif"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_notification_outline" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="true"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="Total Saldo"
                            android:textColor="@color/white_text" />

                        <LinearLayout
                            android:id="@+id/linearBalance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:text="Rp"
                                android:textColor="@color/white_text"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvSaldo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:fontFamily="@font/roboto_bold"
                                android:text="1.028.899"
                                android:textColor="@color/white_text"
                                android:textSize="28sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_below="@id/linearBalance"
                            android:layout_marginTop="16dp"
                            android:background="@color/primary_light" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/linearTopUp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:src="@drawable/ic_top_up"
                                    app:tint="@color/white_text" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="@font/roboto"
                                    android:text="@string/top_up"
                                    android:textColor="@color/white_text"
                                    android:textSize="14sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/linearHistory"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:src="@drawable/ic_history_outline"
                                    app:tint="@color/white_text" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="@font/roboto"
                                    android:text="@string/transaksi"
                                    android:textColor="@color/white_text"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>